--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,6 +85,7 @@
   "exports": "exports",
   "filter-by": "filter by",
   "first-name": "First name",
+  "form-error": "Please correct the errors in the form first",
   "generate": "Generate",
   "go": "Go",
   "home": "Home",
