--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -85,6 +85,7 @@
   "exports": "exports",
   "filter-by": "filtrer selon",
   "first-name": "Prénom",
+  "form-error": "SVP corriger d'abord les erreurs dans le formulaire",
   "generate": "Generer",
   "go": "Rechercher",
   "home": "Accueil",
