View mode on assigments

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,8 @@
   "actions": "actions",
   "all": "All",
   "assignable-parts": "Assignable parts",
+  "assignee": "Assignee",
+  "assignment": "Assignment",
   "assignments": "Assignments",
   "assistant": "Assistant",
   "baptized": "Baptized",
