--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,6 +7,8 @@
   "actions": "actions",
   "all": "Tous",
   "assignable-parts": "Attributions possible",
+  "assignee": "Élève",
+  "assignment": "Attribution",
   "assignments": "Attributions",
   "assistant": "Interlocuteur",
   "baptized": "Baptisé",
