Styling assignments UI

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -118,6 +118,7 @@
   "more": "more",
   "name": "Name",
   "next-week": "Next Week",
+  "no-assignment": "No assignment",
   "not-disabled": "Not disabled",
   "ok": "Ok",
   "parts": "Parts",
