--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -117,6 +117,7 @@
   "more": "Plus",
   "name": "Nom",
   "next-week": "Semaine Suivante",
+  "no-assignment": "Aucune attribution",
   "not-disabled": "Non désactivé",
   "ok": "Ok",
   "parts": "Attributions",
