Before resetting the nativescript thing

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -141,6 +141,8 @@
   "save": "Save",
   "search-users": "Search a user",
   "select-all": "select all",
+  "sign-in": "Sign in",
+  "sign-up": "Sign up",
   "sort-by": "sort by",
   "sort-order": "sort order",
   "sort-users-by-any-assignment": "Sort Users by Any Assignment",
