--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -140,6 +140,8 @@
   "save": "Enregistrer",
   "search-users": "Rechercher un utilisateur",
   "select-all": "sélectionner tout",
+  "sign-in": "Se connecter",
+  "sign-up": "S'inscrire",
   "sort-by": "trier par",
   "sort-order": "ordre de tri",
   "sort-users-by-any-assignment": "Trier suivant toutes les attributions",
