User registration seems to work

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -63,9 +63,11 @@
   "elder": "Elder",
   "email": "Email",
   "error": {
+    "occurred": "An error occured",
     "email": {
       "string": {
-        "email": "This address is incomplete"
+        "email": "This address is incomplete",
+        "already-in-use": "An account already exist with this address. Did you forget your password ?"
       }
     },
     "firstName": {
