Working on assignments

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,7 @@
     "ministry": {
       "assistant": "Assistant",
       "bible-study": "Bible Study",
-      "first-return-visit": "First Return Visit",
+      "return-visit": "Return Visit",
       "initial-call": "Initial Call",
       "second-return-visit": "Second Return Visit",
       "talk": "Talk",
