--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -30,7 +30,7 @@
     "ministry": {
       "assistant": "Interlocuteur",
       "bible-study": "Etude biblique",
-      "first-return-visit": "Première nouvelle visite",
+      "return-visit": "Nouvelle visite",
       "initial-call": "Premier contact",
       "second-return-visit": "Deuxieme nouvelle visite",
       "talk": "Discours",
