Added option to filter which parts to work on

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,7 +33,7 @@
       "return-visit": "Return Visit",
       "initial-call": "Initial Call",
       "second-return-visit": "Second Return Visit",
-      "talk": "Student Talk",
+      "talk": "Talk",
       "title": "Ministry Meeting Title"
     },
     "prayer": "Prayer",
