--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -33,7 +33,7 @@
       "return-visit": "Nouvelle visite",
       "initial-call": "Premier contact",
       "second-return-visit": "Deuxieme nouvelle visite",
-      "talk": "Discours d'Eleve",
+      "talk": "Discours",
       "title": "Ministere"
     },
     "prayer": "Priere",
