Fixing some bugs

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,6 +30,7 @@
     "ministry": {
       "assistant": "Assistant",
       "bible-study": "Bible Study",
+      "memorial-invitation": "Memorial Invitation",
       "return-visit": "Return Visit",
       "initial-call": "Initial Call",
       "second-return-visit": "Second Return Visit",
