--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -30,6 +30,7 @@
     "ministry": {
       "assistant": "Interlocuteur",
       "bible-study": "Etude biblique",
+      "memorial-invitation": "Invitation au Memorial",
       "return-visit": "Nouvelle visite",
       "initial-call": "Premier contact",
       "second-return-visit": "Deuxieme nouvelle visite",
